--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mongoose": "^6.2.6",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
